More manual pages.

--- a/Manual/fileformat.page
+++ b/Manual/fileformat.page
@@ -2,7 +2,7 @@
       type="topic"
       id="fileformat">
 <info>
-  <link type="guide" xref="index"/> 
+  <link type="guide" xref="index"/>
 </info>
-<title>The Gnonogram file format</title>
+<title>Gnonogram file format</title>
 </page>
