--- a/Manual/menus.page
+++ b/Manual/menus.page
@@ -5,5 +5,5 @@
   <link type="guide" xref="index"/>
 </info>
 <title>Gnonograms Menus and Toolbar</title>
-
+<media type="image" mime="image/png" src="./Manual/Menu-Toolbar.png"/>
 </page>
