--- a/Manual/controls.page
+++ b/Manual/controls.page
@@ -9,21 +9,26 @@
 <list>
 	<item><p>Move grid cursor</p>
 			<p> Use the mouse (trackpad) or the keyboard cursor keys (Arrow keys).</p>
-			<p> The selected cell is marked by a rectangular red line and the corresponding row and column clues are highlighted.</p>
+			<p> The selected cell is marked by a rectangular coloured line and the corresponding row and column clues are highlighted.</p>
 	</item>
 	<item><p>Mark a cell filled</p>
-		<p><key>Left click</key>  <em>or</em> <key>Ctrl</key></p> 
+		<p><key>Left click</key>  <em>or</em> <key>F</key></p> 
 	</item>
 	<item><p>Mark a cell empty</p>
-		<p><key>Right click</key>  <em>or</em> <key>Shift</key></p> 
+		<p><key>Right click</key>  <em>or</em> <key>E</key></p> 
 	</item>
 	<item><p>Mark a cell unknown</p>
-		<p><key>Left double click</key>  <em>or</em> <key>Alt</key></p>
+		<p><key>Left double click</key>  <em>or</em> <key>X</key></p>
 	</item>
 	<item><p>Mark a block filled/empty/unknown</p>
-		<p>Position cursor at one end of block, hold down the corresponding button/key,  move cursor to end of block, release button/key.</p>
+		<steps>
+		<item><p>Position cursor at one end of block </p></item>
+		<item><p>Hold down the corresponding button/key</p></item>
+		<item><p>Move cursor to end of block</p></item>
+		<item><p>Release button/key.</p></item>
+		</steps>
 	</item>
-	<item><p>Increase/decrease font size</p>
+	<item><p>Increase/decrease font size (and thereby the size of the whole window)</p>
 		<p>Position the cursor within the grid.  Press <key>+</key> to increase font size or <key>-</key> to decrease it.</p>
 	</item>
 	<item><p>To determine the block extent and freedom of a row or column</p>
