--- a/Manual/helpmenu.page
+++ b/Manual/helpmenu.page
@@ -2,7 +2,16 @@
       type="topic"
       id="helpmenu">
 <info>
-  <link type="guide" xref="menus"/> 
+  <link type="guide" xref="menus"/>
 </info>
-<title>The Help Menu</title>
+<title>Help Menu</title>
+	<list>
+		<item><gui style="menuitem">About</gui>
+			<p>Shows the progamme's Version, Credits and License information</p>
+		</item>
+
+		<item><gui style="menuitem">Manual</gui>
+			<p>Shows this manual.  This may take up to approx 30 seconds to load if it is the first time the help viewer is used.</p>
+		</item>
+   </list>
 </page>
