--- a/Manual/glossary.page
+++ b/Manual/glossary.page
@@ -1,36 +1,50 @@
 <page xmlns="http://projectmallard.org/1.0/"
       type="topic"
       id="glossary">
-<info>
-  <link type="guide" xref="index"/>
-</info>
-<title>Word Meanings</title>
-<terms>
-	<item>
-		<title>Block</title>
-		<p>A group of contiguous (filled) cells.</p>
-	</item>
-	<item>
-	<title>Block extent</title>
-	<p>The minimum number of cells required to accomodate the blocks (with one empty space between each).</p>
-	</item>
-	<item>
-		<title>Cell</title>
-		<p>Smallest square in the grid.  Can either be coloured as filled, empty or unknown</p>
-	</item>
-	<item>
-		<title>Clue</title>
-		<p>The set of numbers that indicate the pattern of filled cells in a row/column (see <link xref="howtoplay"/>)</p>
-	</item>
-	<item>
-		<title>Freedom</title>
-		<p>How much room for manoeuvre there is in a row/column.  The difference between the total number of cells in the row/column and the block extent.</p>
-	</item>
-	<item>
-		<title>Grid</title>
-		<p>A rectangular array of cells</p>
-	</item>
+	<info>
+	  <link type="guide" xref="index"/>
+	</info>
+	<title>Word Meanings</title>
+	<terms>
+		<item>
+			<title>Block</title>
+			<p>A group of contiguous (filled) cells.</p>
+		</item>
 
-</terms>
+		<item>
+			<title>Block extent</title>
+			<p>The minimum number of cells required to accomodate the blocks (with one empty space between each).</p>
+		</item>
 
+		<item>
+			<title>Cell</title>
+			<p>Smallest square in the grid.  Can either be coloured as filled, empty or unknown</p>
+		</item>
+
+		<item>
+			<title>Clue</title>
+			<p>The set of numbers that indicate the pattern of filled cells in a row/column (see <link xref="howtoplay"/>)</p>
+		</item>
+
+		<item>
+			<title>Freedom</title>
+			<p>How much room for manoeuvre there is in a row/column.  The difference between the total number of cells in the row/column and the block extent.</p>
+		</item>
+
+		<item>
+		<title>Region</title>
+			<p>A row or column or a length of contiguous cells within a row or column</p>
+		</item>
+
+		<item>
+		<title>Range (of a block)</title>
+			<p>The region within which the block must be placed</p>
+		</item>
+
+		<item>
+			<title>Grid</title>
+			<p>A rectangular array of cells</p>
+		</item>
+
+	</terms>
 </page>
