--- a/Manual/helpmenu.page
+++ b/Manual/helpmenu.page
@@ -1,11 +1,9 @@
 <page xmlns="http://projectmallard.org/1.0/"
       type="topic"
       id="helpmenu">
-<info>
-  <link type="guide" xref="menus"/>
-</info>
-<title>Help Menu</title>
-	<list>
+   <title>Help Menu</title>
+	<media type="image" mime="image/png" width="187" height="165" src="./Manual/Helpmenu.png"/>
+   <list>
 		<item><gui style="menuitem">About</gui>
 			<p>Shows the progamme's Version, Credits and License information</p>
 		</item>
