--- a/Manual/glossary.page
+++ b/Manual/glossary.page
@@ -4,7 +4,7 @@
 	<info>
 	  <link type="guide" xref="index"/>
 	</info>
-	<title>Word Meanings</title>
+	<title>9. Word Meanings</title>
 	<terms>
 		<item>
 			<title>Block</title>
