--- a/Manual/solvingmode.page
+++ b/Manual/solvingmode.page
@@ -3,8 +3,9 @@
       id="solvingmode">
 <info>
   <link type="guide" xref="index"/>
+  <link type="next" xref="strategy"/>
 </info>
-<title>Solving mode</title>
+<title>3. Solving mode</title>
 <media type="image" mime="image/png" width="350" height="400" src="./Manual/Screenshot-Gnonograms-solve.png"/>
 <p> When Gnonograms in "solving" mode and displays the "working grid". This grid starts with all grey (unknown) cells.</p>
 <p> When in "solving" mode, you can:</p>
