--- a/help/C/config.page
+++ b/help/C/config.page
@@ -2,14 +2,18 @@
       type="topic"
       id="config">
 	<info>
-	  <link type="guide" xref="index"/>
-	  <link type="next" xref="fileformat"/>
+		<link type="guide" xref="index"/>
+		<link type="next" xref="imageconverter"/>
 	</info>
-	<title>7. Configuration and preferences</title>
+	<title>07. Configuration and preferences</title>
 
 	<p>The behaviour and appearance of the program can be controlled using</p>
 	<list>
-		<item><p><link xref="settingsmenu"/></p></item>
-		<item><p><link xref="viewmenu"/></p></item>
+		<item>
+			<p><link xref="menus#settingsmenu"/></p>
+		</item>
+		<item>
+			<p><link xref="menus#viewmenu"/></p>
+		</item>
 	</list>
 </page>
