--- a/help/C/designmode.page
+++ b/help/C/designmode.page
@@ -5,19 +5,30 @@
   <link type="guide" xref="index"/>
   <link type="next" xref="solvingmode"/>
 </info>
-<title>2. Design mode</title>
-<media type="image" mime="image/png" width="350" height="400" src="figures/Screenshot-Gnonograms-design.png"/>
-<p> When Gnonograms starts it is in "design" mode and displays the "design grid". This grid contains the solution to the puzzle.</p>
-<p>In this mode you can:</p>
+<title>02. Design mode</title>
+<media type="image" mime="image/png" width="350" height="400" src="figures/gnonograms-designmode.png"/>
+<p> When Gnonograms starts it is in "design" mode and displays the "design grid". This grid contains the solution to the puzzle.
+</p>
+<p>In this mode you can:
+</p>
 <list>
-	<item><p> Change the dimensions of the grid</p></item>
-	<item><p> Design your own puzzle by drawing on the design grid</p></item>
-	<item><p> Enter the clues directly</p></item>
-	<item><p> Edit the description of the puzzle and other information</p></item>
-	<item><p> Save a puzzle you designed</p></item>
-	<item><p> Load an existing puzzle</p></item>
-	<item><p> Load a partially finished puzzle saved earlier</p></item>
-	<item><p> Let the computer generate a solvable puzzle (random pattern)</p></item>
-	<item><p> Switch to solving mode</p></item>
+	<item><p> Change the dimensions of the grid
+	</p></item>
+	<item><p> Design your own puzzle by drawing on the design grid
+	</p></item>
+	<item><p> Save a puzzle you designed
+	</p></item>
+	<item><p> Load an existing puzzle
+	</p></item>
+	<item><p> Load a partially finished puzzle saved earlier
+	</p></item>
+	<item><p> Start the game editor to enter clues directly or to enter the descriptive information about the puzzle that is displayed at the bottom of the window.
+	</p></item>
+	<item><p> Import a suitable image file, converting it into a nonogram puzzle.
+	</p></item>
+	<item><p> Let the computer generate a solvable puzzle (random pattern)
+	</p></item>
+	<item><p> Switch to solving mode
+	</p></item>
 </list>
 </page>
