--- a/help/C/howtoplay.page
+++ b/help/C/howtoplay.page
@@ -5,17 +5,23 @@
   <link type="guide" xref="index"/>
   <link type="next" xref="designmode"/>
 </info>
-<title>1. How to Play Gnonograms</title>
-<p>Gnonograms is an implementation for the Gnome desktop  of the Japanese logic puzzle "Nonograms", 	also known as "Tsunami", "Griddlers" ......</p>
-<p>The object of the game is to discover the pattern in the grid which is encoded by the clues that are given for each row and column. </p>
-<p>Each clue is a series of numbers which represent blocks of filled in cells in the corresponding row or column.  Each number indicates how many cells are in the block it represents.  Each block must be separated by at least one empty cell from neighbouring blocks.  The order of the numbers in the clue shows the order in which the blocks appear in the row or column.</p>
+<title>01. How to Play Gnonograms</title>
+<p>Gnonograms is an implementation for the Gnome desktop  of the Japanese logic puzzle "Nonograms", 	also known as "Tsunami", "Griddlers" ......
+</p>
+<p>The object of the game is to discover the pattern in the grid which is encoded by the clues that are given for each row and column.
+</p>
+<p>Each clue is a series of numbers which represent blocks of filled in cells in the corresponding row or column.  Each number indicates how many cells are in the block it represents.  Each block must be separated by at least one empty cell from neighbouring blocks.  The order of the numbers in the clue shows the order in which the blocks appear in the row or column.
+</p>
 <figure>
 	<title>
 		Example row pattern with corresponding clue
 	</title>
 	<media type="image" src="figures/row.png"/>
 </figure>
-<p>In a well-designed puzzle it should be possible to discover, by applying pure logic, the pattern, which is often a picture, that the clues represent.</p>
-<p>For some tips on how to solve Gnonogram puzzles see <link type="topic" xref="strategy"/></p>
-<p> For further information see the <link href="http://en.wikipedia.org/wiki/Nonogram">Wikipedia page</link> on Nonograms</p>
+<p>In a well-designed puzzle it should be possible to discover, by applying pure logic, the pattern, which is often a picture, that the clues represent.
+</p>
+<p>For some tips on how to solve Gnonogram puzzles see <link type="topic" xref="strategy"/>
+</p>
+<p> For further information see the <link href="http://en.wikipedia.org/wiki/Nonogram">Wikipedia page</link> on Nonograms
+</p>
 </page>
