--- a/help/C/index.page
+++ b/help/C/index.page
@@ -4,6 +4,7 @@
 <info>
    <link type="next" xref="howtoplay"/>
 </info>
-<title> <media type="image" mime="image/png" src="figures/gnonograms48.png"/> Gnonogram Manual</title>
+<title> <media type="image" mime="image/png" src="figures/gnonograms48.png"/> Gnonogram v 0.9.4 Manual
+</title>
 
 </page>
