--- a/html/C.css
+++ b/html/C.css
@@ -1,13 +1,10 @@
 
 html { height: 100%; }
 body {
-  margin: 0;
-  padding: 1em 1em 0 1em;
+  margin: 0; padding: 0;
   background-color: #f3f3f0;
   color: #000000;
   direction: ltr;
-  max-width: 73em;
-  position: relative;
 }
 div.body {
   margin: 0;
@@ -58,7 +55,7 @@ h3, h4, h5, h6, h7 { font-size: 1em; }
 p { line-height: 1.72em; }
 div, pre, p { margin: 1em 0 0 0; padding: 0; }
 div:first-child, pre:first-child, p:first-child { margin-top: 0; }
-div.inner, div.contents, pre.contents { margin-top: 0; }
+div.inner, div.region, div.contents, pre.contents { margin-top: 0; }
 pre.contents div { margin-top: 0 !important; }
 p img { vertical-align: middle; }
 div.clear {
@@ -86,10 +83,6 @@ ul, ol, dl { margin: 0; padding: 0; }
 li {
   margin: 1em 0 0 0;
   margin-left: 2.4em;
-  -webkit-margin-start: 2.4em;
-  -webkit-margin-end: 0;
-  -moz-margin-start: 2.4em;
-  -moz-margin-end: 0;
   padding: 0;
 }
 li:first-child { margin-top: 0; }
@@ -99,10 +92,6 @@ dt + dt { margin-top: 0; }
 dd {
   margin: 0.2em 0 0 0;
   margin-left: 1.44em;
-  -webkit-margin-start: 1.44em;
-  -webkit-margin-end: 0;
-  -moz-margin-start: 1.44em;
-  -moz-margin-end: 0;
 }
 ol.compact li { margin-top: 0.2em; }
 ul.compact li { margin-top: 0.2em; }
@@ -136,9 +125,10 @@ div.contents + div.desc { margin: 0.2em 0 0 0; }
 pre.contents {
   padding: 0.5em 1em 0.5em 1em;
 }
-div.links > div.title > span.title {
+div.links > div.inner > div.title span.title {
   border-bottom: solid 1px #babdb6;
 }
+div.links .desc { color: #2e3436; }
 div.links ul { margin: 0; padding: 0; }
 li.links {
   margin: 0.5em 0 0.5em 0;
@@ -208,10 +198,6 @@ div.code {
 }
 div.figure {
   margin-left: 1.72em;
-  -webkit-margin-start: 1.72em;
-  -webkit-margin-end: 0;
-  -moz-margin-start: 1.72em;
-  -moz-margin-end: 0;
   padding: 4px;
   color: #2e3436;
   border: solid 1px #babdb6;
@@ -220,7 +206,7 @@ div.figure {
 div.figure > div.inner > a.zoom {
   float: right;
 }
-div.figure > div.inner > div.contents {
+div.figure > div.inner > div.region > div.contents {
   margin: 0;
   padding: 0.5em 1em 0.5em 1em;
   clear: both;
@@ -229,19 +215,18 @@ div.figure > div.inner > div.contents {
   border: solid 1px #babdb6;
   background-color: #ffffff;
 }
-div.list > div.title { margin-bottom: 0.5em; }
+div.list > div.inner > div.title { margin-bottom: 0.5em; }
 div.listing > div.inner { margin: 0; padding: 0; }
-div.listing > div.inner > div.desc { font-style: italic; }
+div.listing > div.inner > div.region > div.desc { font-style: italic; }
 div.note {
   padding: 6px;
-  border-top: solid 1px #ef2929;
-  border-bottom: solid 1px #ef2929;
-  background-color: #fffacc;
+  border: solid 1px #e5e5e3;
+  background-color: #f3f3f0;
 }
 div.note > div.inner > div.title {
   margin-left: 30px;
 }
-div.note > div.inner > div.contents {
+div.note > div.inner > div.region > div.contents {
   margin: 0; padding: 0;
   margin-left: 30px;
 }
@@ -262,12 +247,10 @@ div.note-sidebar {
   max-width: 40%;
   margin-left: 6px;
   padding: 6px;
-  border: solid 1px #babdb6;
-  background-color: #f3f3f0;
 }
 div.note-sidebar > div.inner { background-image: none; }
 div.note-sidebar > div.inner > div.title { margin-left: 0px; }
-div.note-sidebar > div.inner > div.contents { margin-left: 0px; }
+div.note-sidebar > div.inner > div.region > div.contents { margin-left: 0px; }
 div.quote {
   padding: 0;
   background-image: url('yelp-quote-201C.png');
@@ -283,14 +266,15 @@ blockquote {
   margin: 0; padding: 0;
   margin-left: 48px;
 }
-div.quote > div.inner > div.cite {
+div.quote > div.inner > div.region > div.cite {
   margin-top: 0.5em;
   margin-left: 48px;
   color: #2e3436;
 }
-div.quote > div.inner > div.cite::before {
+div.quote > div.inner > div.region > div.cite::before {
   
   content: '― ';
+  color: #2e3436;
 }
 div.screen {
   background-color: #f3f3f0;
@@ -299,38 +283,29 @@ div.screen {
 ol.steps, ul.steps {
   margin: 0;
   padding: 0.5em 1em 0.5em 1em;
-  border-top: solid 1px;
-  border-bottom: solid 1px;
-  border-color: #729fcf;
-  background-color: #fffacc;
+  border-left: solid 4px #edd400;
+  -moz-box-shadow: 0 1px 2px #babdb6;
+  -webkit-box-shadow: 0 1px 2px #babdb6;
+  box-shadow: 0 1px 2px #babdb6;
 }
 ol.steps .steps {
   padding: 0;
   border: none;
   background-color: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
-li.steps {
-  margin-left: 1.44em;
-  -webkit-margin-start: 1.44em;
-  -webkit-margin-end: 0;
-  -moz-margin-start: 1.44em;
-  -moz-margin-end: 0;
-}
-li.steps li.steps {
-  margin-left: 2.4em;
-  -webkit-margin-start: 2.4em;
-  -webkit-margin-end: 0;
-  -moz-margin-start: 2.4em;
-  -moz-margin-end: 0;
-}
-div.synopsis > div.inner > div.contents, div.synopsis > pre.contents {
+li.steps { margin-left: 1.44em; }
+li.steps li.steps { margin-left: 2.4em; }
+div.synopsis > div.inner > div.region > div.contents, div.synopsis > pre.contents {
   padding: 0.5em 1em 0.5em 1em;
   border-top: solid 1px;
   border-bottom: solid 1px;
   border-color: #729fcf;
   background-color: #f3f3f0;
 }
-div.synopsis > div.inner > div.desc { font-style: italic; }
+div.synopsis > div.inner > div.region > div.desc { font-style: italic; }
 div.synopsis div.code {
   background: none;
   border: none;
@@ -396,36 +371,85 @@ pre span.prompt {
 }
 span.sys { font-family: monospace; }
 span.var { font-style: italic; }
-div.media-video > div.inner { display: inline-block; }
+div.media-video > div.inner { display: inline-block; text-align: center; }
 div.media-video > div.inner video { margin: 0; }
 div.media-controls {
-  margin: 0; padding: 2px;
+  min-width: 24em;
+  height: 24px;
+  margin: 0; padding: 4px;
+  border: solid 1px #000000;
+  background-color: #2e3436;
+  color: #ffffff;
+}
+button.media-play {
+  height: 24px;
+  float: left;
   background-color: #f3f3f0;
   border: solid 1px #babdb6;
+  padding: 0; line-height: 0;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
 }
-div.media-controls button, div.media-controls input { margin: 0; }
-div.media-controls button.media-play { padding: 0; line-height: 0; }
-div.media-controls button.media-play canvas { margin: 0; }
-div.media-controls input.media-range { height: 20px; }
-
-
-div.media-ttml {
-  margin: 0; padding: 0;
+button.media-play:hover, button.media-play:focus {
+  background-color: #e6f2ff;
+  border-color: #729fcf;
+  -moz-box-shadow: 0 0 2px #e6f2ff;
+  -webkit-box-shadow: 0 0 2px #e6f2ff;
+  box-shadow: 0 0 2px #e6f2ff;
 }
+button.media-play canvas { margin: 0; }
+div.media-range {
+  display: inline-block;
+  margin: 2px 8px 0 8px;
+  padding: 0;
+  height: 20px;
+}
+span.media-current {
+  float: right;
+  font-size: 16px;
+  line-height: 20px;
+}
+div.media-ttml { margin: 0; padding: 0; }
 div.media-ttml-p {
+  text-align: left;
   display: none;
-  margin: 6px 0 0 0;
+  margin: 6px auto 0 auto;
   padding: 6px;
   max-width: 24em;
   border: solid 1px #edd400;
   background-color: #fffacc;
-  box-shadow: 2px 2px 4px #babdb6;
-  -webkit-box-shadow: 2px 2px 4px #babdb6;
   -moz-box-shadow: 2px 2px 4px #babdb6;
+  -webkit-box-shadow: 2px 2px 4px #babdb6;
+  box-shadow: 2px 2px 4px #babdb6;
+}
+div.yelp-data { display: none; }
+div.ui-expander > div.inner > div.title:hover,
+div.ui-expander > div.inner > div.hgroup:hover * {
+  color: #204a87;
+}
+div.ui-expander > div.inner > div.hgroup > .subtitle {
+  margin-left: 1.44em;
+}
+div.ui-expander-e > div.inner > div.title span.ui-expander-arrow-ltr,
+div.ui-expander-e > div.inner > div.hgroup span.ui-expander-arrow-ltr {
+  display: inline-block; 
+  -moz-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+div.ui-expander-e > div.inner > div.title span.ui-expander-arrow-rtl,
+div.ui-expander-e > div.inner > div.hgroup span.ui-expander-arrow-rtl {
+  display: inline-block; 
+  -moz-transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 
-pre.syntax {
-}
 pre.syntax span.function, pre.syntax span.keyword, pre.syntax span.tag {
   color: #729fcf;
 }
@@ -433,14 +457,38 @@ pre.syntax span.string, pre.syntax span.operator {
   color: #2e3436;
 }
 
+span.link-button a {
+  display: inline-block;
+  background-color: #729fcf;
+  color: #ffffff;
+  text-shadow: #204a87 1px 1px 0px;
+  border: solid 1px #204a87;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+span.link-button a:visited {
+  color: #ffffff;
+}
+span.link-button a:hover {
+  text-decoration: none;
+  color: #ffffff;
+}
 div.floatleft {
   float: left;
-  margin-top: 0;
   margin-right: 1em;
 }
 div.floatright {
   float: right;
-  margin-top: 0;
+  margin-left: 1em;
+}
+div.floatstart {
+  float: left;
+  margin-right: 1em;
+}
+div.floatend {
+  float: right;
   margin-left: 1em;
 }
 
@@ -478,6 +526,7 @@ table.toronto {
 }
 table.toronto td {
   padding-top: 1em;
+  padding-left: 0;
   padding-right: 0.83em;
   width: 33%;
 }
@@ -496,39 +545,38 @@ td.twocolumnright {
   width: 52%; vertical-align: top;
   margin: 0; padding: 0;
   padding-left: 1em;
-  -webkit-padding-start: 1em;
-  -webkit-padding-end: 0;
-  -moz-padding-start: 1em;
-  -moz-padding-end: 0;
 }
 
-div.desc a {
-  color: #2e3436;
+div.links .desc a {
+  color: inherit;
 }
-div.desc a:hover {
+div.links .desc a:hover {
   color: #204a87;
 }
 a.bold { font-weight: bold; }
-a.linkdiv { display: block; }
-a.linkdiv:hover { text-decoration: none; }
-div.linkdiv div.title {
-  font-size: 1em;
-  color: inherit;
-}
-div.linkdiv div.desc {
-  color: #2e3436;
-}
-div.linkdiv {
+a.linkdiv {
+  display: block;
   margin: 0;
   padding: 0.5em;
-  -moz-border-radius: 6px;
-  border: solid 1px #ffffff;
 }
-a:hover div.linkdiv {
+a.linkdiv:hover {
   text-decoration: none;
-  border-color: #729fcf;
   background-color: #e6f2ff;
+  outline: solid 1px #729fcf;
 }
+a.linkdiv > span.title {
+  display: block;
+  margin: 0;
+  font-size: 1em;
+  font-weight: bold;
+  color: inherit;
+}
+a.linkdiv > span.desc {
+  display: block;
+  margin: 0.2em 0 0 0;
+  color: #2e3436;
+}
+span.linkdiv-dash { display: none; }
 
 div.example {
   border-left: solid 4px #babdb6;
@@ -548,18 +596,15 @@ div.comment div.cite {
   font-style: italic;
 }
 
+div.tree > div.inner > div.title { margin-bottom: 0.5em; }
 ul.tree {
   margin: 0; padding: 0;
   list-style-type: none;
 }
-li.tree { margin: 0; padding: 0; }
+li.tree { margin: -2px 0 0 0; padding: 0; }
 li.tree div { margin: 0; padding: 0; }
 ul.tree ul.tree {
   margin-left: 1.44em;
-  -webkit-margin-start: 1.44em;
-  -webkit-margin-end: 0;
-  -moz-margin-start: 1.44em;
-  -moz-margin-end: 0;
 }
 div.tree-lines ul.tree { margin-left: 0; }
 
@@ -588,4 +633,42 @@ div.facet li {
 div.facet input {
   vertical-align: middle;
   margin: 0;
+}
+dt.gloss-term {
+  margin-top: 1.2em;
+  font-weight: bold;
+  color: #2e3436;
+}
+dt.gloss-term:first-child, dt.gloss-term + dt.gloss-term { margin-top: 0; }
+dt.gloss-term + dd { margin-top: 0.2em; }
+dd.gloss-link {
+  margin: 0 0.2em 0 0.2em;
+  border-left: solid 4px #729fcf;
+  padding-left: 1em;
+}
+dd.gloss-def {
+  margin: 0 0.2em 1em 0.2em;
+  border-left: solid 4px #babdb6;
+  padding-left: 1em;
+}
+a.gloss-term {
+  tabindex: 0;
+  border-bottom: dashed 1px #729fcf;
+}
+a.gloss-term:hover {
+  text-decoration: none;
+  border-bottom-style: solid;
+}
+span.gloss-desc {
+  display: none;
+  position: absolute;
+  margin: 0;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  max-width: 24em;
+  color: #2e3436;
+  background-color: #fffacc;
+  border: solid 1px #edd400;
+  -moz-box-shadow: 2px 2px 4px #babdb6;
+  -webkit-box-shadow: 2px 2px 4px #babdb6;
+  box-shadow: 2px 2px 4px #babdb6;
 }
